--- a/yes_page.html
+++ b/yes_page.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="container">
-        <h1 class="header_text">Athan angne vazhikk vaa , ehm samaychichond ith nee vecho</h1>
+        <h1 class="header_text">Athan angne vazhikk vaa , ehm samayayichond ith nee vecho</h1>
         
         <!-- Button to redirect -->
         <div class="button_container">
